--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "lottie-react": "^2.4.1",
     "next": "latest",
+    "next-themes": "^0.4.6",
     "react": "latest",
     "react-dom": "latest"
   },
