--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "multiplepage-portfolio",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "ts-node scripts/generate-posts.ts && next dev",
+    "build": "ts-node scripts/generate-posts.ts && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,19 +13,31 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "lottie-react": "^2.4.1",
-    "next": "latest",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.344.0",
+    "next": "14.1.0",
     "next-themes": "^0.4.6",
-    "react": "latest",
-    "react-dom": "latest"
+    "react": "^18",
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.31",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "date-fns": "^4.1.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "gray-matter": "^4.0.3",
+    "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "latest"
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
